--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{% if page.title %} {{ page.title }} {% else %} {{ site.name }} {% endif %}</title>
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-        
-        <!-- Bootstrap core CSS -->
-    	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-
-    </head>
+	{% include head.html %}
+    
     <body>
 
-		<div class="container">
-			<br />
-			<div class="col-sm-3">
-				<!-- <h1>{{ site.title }}</h1> -->
-				<img src="{{ site.baseurl }}/images/logo2.png" height="170px" width="170px" /><br />	
-				
+		<div class="row">
+			<div class="col-sm-2 col-sm-offset-1">
+				{% include header.html %}
 			</div>
 
-			<div class="col-sm-7 col-offset-2">
+			<div class="col-sm-6 col-sm-offset-4">
 				
 				{{ content }}
 				
 				<footer>
 					&copy; {{ site.title }}
 					{% if site.github %} 
-						- <a href="{{ site.github }}">{{ site.github }}</a>
+						- <a id="github" href="{{ site.github }}">{{ site.github }}</a>
 					{% endif %}
 				</footer>
 			</div>
 		
 		</div>
-    </body>
+</body>
+
+
 </html>
