--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta">
-    	<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y " }}</time>
-    	<span class="location">&nbsp&nbsp发布于{{ page.location }}</span></br>
-    </p>
+    {% include postinfo.html %}
   </header>
 
 
