--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <header class="site-header">
 
-  <img src="{{ site.baseurl }}/images/logo2.png" height="170px" width="170px" /><br />  
+  <a href="{{ site.baseurl }}/"><img  src="{{ site.baseurl }}/images/logo2.png" height="170px" width="170px" /><br /></a>
   <!-- <ul class="social-media-list"> -->
-    {% if site.weibo_username %}
-    {% include icon-weibo.html %}
-    {% endif %}
-    {% if site.github_username %}
-    {% include icon-github.html  %}
-    {% endif %}
-    {% if site.twitter_username %}
-    {% include icon-twitter.html  %}
-    {% endif %}
+  {% if site.weibo_username %}
+  {% include icon-weibo.html %}
+  {% endif %}
+  {% if site.github_username %}
+  {% include icon-github.html  %}
+  {% endif %}
+  {% if site.twitter_username %}
+  {% include icon-twitter.html  %}
+  {% endif %}
   <!-- </ul> -->
   <br \>
   <br \>
