--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,19 @@ div.content .highlight {
 }
 
 
+#gotop{
+    /*display:none;*/
+    width:60px;
+    height:60px;
+    position:fixed;
+    right:8%;
+    bottom:100px;
+    background:url(gotop.png);    
+    vertical-align: middle;
+    /*text-align: center;*/
+    /*margin-left:auto;*/
+    /*margin-right:auto;*/
+}
 
 footer {
     border-top: 1px solid #E6E6E6;
