--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col-sm-2 col-sm-offset-1">
 				{% include header.html %}
-				<div id="gotop"></div>
+				<!-- <div id="gotop"></div> -->
 			</div>
 
 			<div class="col-sm-6 col-sm-offset-4">
@@ -24,8 +24,8 @@
 		
 		</div>
 
-<script type="text/javascript" src="{{site.baseurl}}/js/jquery.js"></script>
-<script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script>
+<!-- <script type="text/javascript" src="{{site.baseurl}}/js/jquery.js"></script> -->
+<!-- <script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script> -->
 </body>
 
 </html>
