--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header class="site-header">
-
   <a href="{{ site.baseurl }}/"><img  src="{{ site.baseurl }}/images/logo2.png" height="170px" width="170px" /><br /></a>
   <!-- <ul class="social-media-list"> -->
   {% if site.weibo_username %}
@@ -18,5 +17,7 @@
   <br \>
   <br \>
   {{ site.description }}
-
+  <br \>
+  <br \>
+  <a class="header-contact" href="{{ site.baseurl }}/catalogue">目录</a>
 </header>
