--- a/_includes/postinfo.html
+++ b/_includes/postinfo.html
@@ -3,4 +3,10 @@
     {% if page.location %}
     &nbsp&nbsp发布于&nbsp<span class="location">{{ page.location }}</span></br>
     {% endif %}
+    {% if page.tags %}
+    <span>标签：</span>
+    {% for tag in page.tags %}
+    <a href="">{{ tag }}&nbsp&nbsp</a>
+    {% endfor %}
+    {% endif %}
 </p>
