--- a/css/main.css
+++ b/css/main.css
@@ -36,13 +36,6 @@ h2 {
     color: #666666;
     border-bottom: 1px solid #E6E6E6;
 }
-        
-h3 {
-    font-weight: normal;
-    margin-bottom: 5px;
-    color: #666666;
-    text-decoration: underline;
-}
 
 
 a:hover {
@@ -65,16 +58,9 @@ div#container {
  * Right aka content column formatting
  * //////////////////////////////////
  */
-div.right {
-    /*width: 500px;*/
-    float: left;
-}
+
            
-div.content {
-    border-top: 1px solid #E6E6E6;
-    margin-top: 10px;
-    padding-top: 10px;
-}
+
 
 div.content pre {
     background: #333333;
@@ -122,6 +108,7 @@ div.content .highlight {
     font-family: STKaiti;
     font-weight:bold;
 }
+
 .location {
     color:#848484;
     font-size: 16px;
@@ -140,14 +127,13 @@ div.content .highlight {
 
 footer {
     border-top: 1px solid #E6E6E6;
-    /*width: 100%;*/
     height: 10px;
     margin-top: 10px;
-    padding-top: 10px;
+    /*padding-top: 10px;*/
     color: #C2C2C2;
-    font-size: 15px;
+    /*font-size: 15px;*/
     bottom: 0;
-    padding-bottom: 10px;
+    /*padding-bottom: 10px;*/
 }
 
 footer div#github {
@@ -158,26 +144,21 @@ a#github {
     color: #A4A4A4;
 }
 
-div.right h1 {
-	margin-bottom: -2px;
-}
 
-div.right ul {
-	list-style: none;
-	margin-left: 0;
-	padding: 0;
-}
 
-div.right ul li {
+.tags {
+    font-size: 20;
+    list-style-type: none;
 	margin-top: 5px;
-	margin-left: 0;
-	padding: 0;
+    text-align: left;
+	/*margin-left: 0;*/
+	/*padding: 0;*/
 }
+/*.likids {
+    font-size: 200;
+}
+*/
 
-div.right .post ul {
-	list-style: square;
-	margin-left: 15px;
-}
 
 /**
  * ///////////////////////////////////
