--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,5 +21,6 @@
   <br />
   <a class="header-contact" href="{{ site.baseurl }}/catalogue">目录</a>
   <br />
+  <a class="header-contact" href="{{ site.baseurl }}/">主页</a>
   <br />
 </header>
