--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,15 @@
   {{ site.description }}
   <br />
   <br />
-  <a class="header-contact" href="{{ site.baseurl }}/catalogue">目录</a>
-  <br />
   <a class="header-contact" href="{{ site.baseurl }}/">主页</a>
   <br />
+  <a class="header-contact" href="{{ site.baseurl }}/catalogue">目录</a>
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
+  <img  src="{{ site.baseurl }}/images/weixin.jpg" height="170px" width="170px" />
+  <div><font size="3">关注微信公众号<br>获取博客动态&参与互动</font></div>
 </header>
