--- a/_includes/simple_footer.html
+++ b/_includes/simple_footer.html
@@ -3,4 +3,5 @@
   {% if site.github %} 
   - <a id="github" href="{{ site.github }}">{{ site.github }}</a>
   {% endif %}
+  <font color="#610B21">本站所有内容未经作者同意禁止转载</font>
 </footer>
