--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="site-header">
-  <a href="{{ site.baseurl }}/"><img  src="{{ site.baseurl }}/images/logo2.png" height="150px" width="150px" /><br /></a>
+  <a href="{{ site.baseurl }}/"><img  src="{{ site.baseurl }}/images/logo2.png" height="150px" width="150px" /></a>
+  <br />
   <!-- <ul class="social-media-list"> -->
   {% if site.weibo_username %}
   {% include icon-weibo.html %}
