--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header class="site-header">
+  <meta name="msvalidate.01" content="3268F9B27E2CB24FCEDDEC62894605A3" />
   <a href="{{ site.baseurl }}/"><img  src="{{ site.baseurl }}/images/logo2.png" height="150px" width="150px" /></a>
   <br />
   <!-- <ul class="social-media-list"> -->
@@ -24,6 +25,7 @@
   <br />
   <a class="header-contact" href="{{ site.baseurl }}/catalogue">目录</a>
   <br />
+  <a class="header-contact" href="{{ site.baseurl }}/blogroll">友情链接</a>
   <br />
   <br />
   <img  src="{{ site.baseurl }}/images/weixin.jpg" height="105px" width="105px" />
