--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="msvalidate.01" content="3268F9B27E2CB24FCEDDEC62894605A3" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% if page.title %} {{ page.title }} {% else %} {{ site.name }} {% endif %}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
