--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,5 @@
 .highlight .hll { background-color: #49483e }
-.highlight .c { color: #75715e } /* Comment */
+.highlight .c { color: #bdb76b;} /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
