--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ a#github {
         font-weight:bold; 
         color: black;
         /*position: fixed;*/
-        position: absolute;
+        position: fixed;
         text-align: center;
         margin-left:auto;
         margin-right:auto;
