--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,6 @@
   <a class="header-contact" href="{{ site.baseurl }}/blogroll">友情链接</a>
   <br />
   <br />
-  <img  src="{{ site.baseurl }}/images/weixin.jpg" height="105px" width="105px" />
-  <div><font size="3">关注微信公众号<br>获取博客动态&参与互动</font></div>
+  <!-- <img  src="{{ site.baseurl }}/images/weixin.jpg" height="105px" width="105px" /> -->
+  <!-- <div><font size="3">关注微信公众号<br>获取博客动态&参与互动</font></div> -->
 </header>
