--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="{{ site.baseurl }}/css/bootstrap.css" rel="stylesheet"> -->
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
