--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,20 +6,22 @@ layout: default
 {% include head.html %}
 
 <body>
-  <div class="row">
-    <div class="col-sm-2 col-sm-offset-1">
-      {% include header.html %}
+    {% include navbar.html %}
+    <br />
+    <br />
+    <br />
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-0">
+        {{ content }}
+      </div>
+      <div class="col-sm-3 col-sm-offset-0">
+        <section class="well well-my">
+          {% include asider.html %}
+        </section>
+      </div>
     </div>
-    <div class="col-sm-6 col-sm-offset-4">
-      {{ content }}
-      <br />
-      {% include simple_footer.html %}
-      <br/>
-	    <br/>
-    </div>
-  </div>
-  
-<!-- <script type="text/javascript" src="{{site.baseurl}}/js/jquery.js"></script> -->
+    {% include simple_footer.html %}
+<script type="text/javascript" src="{{site.baseurl}}/js/jquery.js"></script>
 <!-- <script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script> -->
 
 </body>
