--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@ layout: default
       <div class="col-sm-8 col-sm-offset-0">
         {{ content }}
       </div>
-      <div class="col-sm-3 col-sm-offset-0">
+      <div class="col-sm-4 col-sm-offset-0">
         <section class="well well-my">
           {% include asider.html %}
         </section>
@@ -22,7 +22,7 @@ layout: default
     </div>
     {% include simple_footer.html %}
 <script type="text/javascript" src="{{site.baseurl}}/js/jquery.js"></script>
-<!-- <script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script> -->
+<script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script>
 
 </body>
 
