--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@ layout: default
   </div>
 </div>
 
+<div class="post">
+
 <br /><br /><br />
 <a href="#top" target="_self">返回顶部</a>
 <br /><br /><br />
@@ -34,6 +36,7 @@ var duoshuoQuery = {short_name:"polarliongitio"};
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 </script>
+</div>
 
 <!-- 多说公共JS代码 end -->
 
