--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ div.content .highlight {
 
 .well-my {
     /*margin-top:20px;*/
-    margin-left:50px;
+    /*margin-left:50px;*/
     background-color: #ffffff;
     border-color: #ffffff;
     /*padding-left: 50px;*/
