--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,8 @@
-<div class="navbar navbar-default navbar-fixed-top navbar-black" role="navigation">
+
+<div  id="polarnavbar" class="navbar navbar-default navbar-fixed-top navbar-black"role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <button id="navbutton" type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -9,12 +10,12 @@
             </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/"><font color="#E6E6E6">Polarlion</font></a>
         </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <div id="nav" class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
-                <li><a href="/"><font color="#E6E6E6">博客</font></a></li>
-                <li><a href="{{ site.baseurl }}/"><font color="#E6E6E6">关于</font></a></li>
-                <li><a href="{{ site.baseurl }}/catalogue"><font color="#E6E6E6">茵蒂克丝</font></a></li>
-                <li><a href="{{ site.baseurl }}/blogroll"><font color="#E6E6E6">友情链</font></a></li>
+                <li id="blog"><a href="/"><font color="#E6E6E6">博客</font></a></li>
+                <li id="about"><a href="{{ site.baseurl }}/"><font color="#E6E6E6">关于</font></a></li>
+                <li id="index"><a href="{{ site.baseurl }}/catalogue"><font color="#E6E6E6" >茵蒂克丝</font></a></li>
+                <li id="blogroll"><a href="{{ site.baseurl }}/blogroll"><font color="#E6E6E6">友情链</font></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -22,3 +23,4 @@
         <!-- /.navbar-collapse -->
     </div>
 </div> <!-- /.navbar -->
+
