--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
                 <li id="about"><a href="{{ site.baseurl }}/"><font color="#E6E6E6">关于</font></a></li>
                 <li id="index"><a href="{{ site.baseurl }}/catalogue"><font color="#E6E6E6" >茵蒂克丝</font></a></li>
                 <li id="blogroll"><a href="{{ site.baseurl }}/blogroll"><font color="#E6E6E6">友情链</font></a></li>
-                <li id="lifeblog"><a href="{{ site.baseurl }}/lifeblog"><font color="#848484">来福部落格</font></a></li>
+                <li id="lifeblog"><a href="{{ site.baseurl }}/lifeblog"><font color="#2E2E2E">来福部落格</font></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
