--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,8 @@ layout: default
 <div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{page.url}}"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
+
+<!--<script type="text/javascript">
 var duoshuoQuery = {short_name:"polarliongitio"};
 	(function() {
 		var ds = document.createElement('script');
@@ -37,6 +38,7 @@ var duoshuoQuery = {short_name:"polarliongitio"};
 	})();
 </script>
 </div>
+-->
 
 <!-- 多说公共JS代码 end -->
 
