--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,15 +12,18 @@ layout: default
 <div class="content">
   <div class="post">
   	{{ content }}
+    <br /><br /><br />
+	<a href="#top" target="_self">返回顶部</a>
+    <br /><br /><br />
   </div>
+
 </div>
 
-<div class="post">
+<!--<div class="post">-->
 
-<br /><br /><br />
-<a href="#top" target="_self">返回顶部</a>
-<br /><br /><br />
 
+
+<!-- {% include simple_footer.html %} -->
 <!-- 多说评论框 start -->
 <!--<div class="ds-thread" data-thread-key="{{page.id}}" data-title="{{page.title}}" data-url="{{page.url}}"></div>-->
 <!-- 多说评论框 end -->
